# world-tax-rs

./: .envrc  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  get_vat_rates.py  manifest.scm  trade_agreements.json  typeshare.toml  vat_rates.json
.github/workflows/: publish.yml  update-rates.yml
src/: calculation.rs  calculation_test.rs  errors.rs  helper.rs  lib.rs  main.rs  provider.rs  types.rs
