[package]
name = "world-tax"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A simple world tax calculator"
homepage = "https://github.com/franzos/world-tax-rs"
repository = "https://github.com/franzos/world-tax-rs"
readme = "README.md"
authors = ["Franz Geffke <m@f-a.nz>"]

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
serde_derive = "1.0.216"
serde_json = "1.0.133"
log = "0.4"
env_logger = "0.11"
rust_iso3166 = "0.1.13"
thiserror = "2.0.9"