[package]
name = "world-tax"
version = "0.5.1"
edition = "2021"
license = "MIT"
description = "A simple world tax calculator"
homepage = "https://gofranz.com/"
repository = "https://github.com/franzos/world-tax-rs"
readme = "README.md"
authors = ["Franz Geffke <mail@gofranz.com>"]
keywords = ["tax", "vat"]
categories = ["finance"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
serde_json = "1.0.133"
log = "0.4"
env_logger = "0.11"
rust_iso3166 = "0.1"
thiserror = "2.0"
strum = "0.27"
strum_macros = "0.27"
rust_decimal = "1.37"
rust_decimal_macros = "1.36.0"
typeshare = "1.0.4"